==> CPBaja/STM32SD_H750/src/bsp_sd.c <==
#include "bsp_sd.h"
#include "core_debug.h"
#include "interrupt.h"
#include "PeripheralPins.h"
#include "stm32yyxx_ll_gpio.h"
      #define SD_INSTANCE              SDMMC1
      #define SD_INSTANCE              SDMMC2
  #define SD_CLK_EDGE              SDMMC_CLOCK_EDGE_RISING
    #define SD_CLK_BYPASS            SDMMC_CLOCK_BYPASS_DISABLE
  #define SD_CLK_PWR_SAVE          SDMMC_CLOCK_POWER_SAVE_DISABLE
  #define SD_BUS_WIDE_1B           SDMMC_BUS_WIDE_1B
  #define SD_BUS_WIDE_4B           SDMMC_BUS_WIDE_4B
  #define SD_HW_FLOW_CTRL_ENABLE   SDMMC_HARDWARE_FLOW_CONTROL_ENABLE
  #define SD_HW_FLOW_CTRL_DISABLE  SDMMC_HARDWARE_FLOW_CONTROL_DISABLE
      #define SD_CLK_DIV               SDMMC_TRANSFER_CLK_DIV
      #define SD_CLK_DIV               SDMMC_NSpeed_CLK_DIV
      #define SD_TRANSCEIVER_ENABLE    SDMMC_TRANSCEIVER_ENABLE
      #define SD_TRANSCEIVER_DISABLE   SDMMC_TRANSCEIVER_DISABLE
      #define SD_TRANSCEIVER_ENABLE    SDMMC_TRANSCEIVER_PRESENT
      #define SD_TRANSCEIVER_DISABLE   SDMMC_TRANSCEIVER_NOT_PRESENT
  #define SD_INSTANCE              SDIO
  #define SD_CLK_EDGE              SDIO_CLOCK_EDGE_RISING
    #define SD_CLK_BYPASS            SDIO_CLOCK_BYPASS_DISABLE
  #define SD_CLK_PWR_SAVE          SDIO_CLOCK_POWER_SAVE_DISABLE
  #define SD_BUS_WIDE_1B           SDIO_BUS_WIDE_1B
  #define SD_BUS_WIDE_4B           SDIO_BUS_WIDE_4B
  #define SD_HW_FLOW_CTRL_ENABLE   SDIO_HARDWARE_FLOW_CONTROL_ENABLE

uint8_t BSP_SD_Init(void)
{
  uint8_t sd_state = MSD_OK;

  /* Check if SD is not yet initialized */
  if (uSdHandle.State == HAL_SD_STATE_RESET) {
    /* uSD device interface configuration */
#if !defined(STM32_CORE_VERSION) || (STM32_CORE_VERSION <= 0x02050000)
    uSdHandle.Instance = SD_INSTANCE;
#else
    if (!BSP_SD_GetInstance()) {
      sd_state = MSD_ERROR;
    }
#endif /* !STM32_CORE_VERSION || (STM32_CORE_VERSION <= 0x02050000) */

    uSdHandle.Init.ClockEdge           = SD_CLK_EDGE;
#if defined(SD_CLK_BYPASS)
    uSdHandle.Init.ClockBypass         = SD_CLK_BYPASS;
#endif
    uSdHandle.Init.ClockPowerSave      = SD_CLK_PWR_SAVE;
    uSdHandle.Init.BusWide             = SD_BUS_WIDE_4B;
    uSdHandle.Init.HardwareFlowControl = SD_HW_FLOW_CTRL;
    uSdHandle.Init.ClockDiv            = 0x08;
#if defined(USE_SD_TRANSCEIVER) && (USE_SD_TRANSCEIVER != 0U)
#if defined(SDMMC_TRANSCEIVER_ENABLE)
    uSdHandle.Init.Transceiver = SD_TRANSCEIVER_ENABLE;
#else
    uSdHandle.Init.TranceiverPresent   = SD_TRANSCEIVER_ENABLE;
#endif
    if (sd_state == MSD_OK) {
      BSP_SD_Transceiver_MspInit(&uSdHandle, NULL);
    }
#endif

    if ((sd_state == MSD_OK) && (SD_detect_ll_gpio_pin != LL_GPIO_PIN_ALL)) {
      /* Msp SD Detect pin initialization */
      BSP_SD_Detect_MspInit(&uSdHandle, NULL);
      if (BSP_SD_IsDetected() != SD_PRESENT) { /* Check if SD card is present */
        sd_state = MSD_ERROR_SD_NOT_PRESENT;
      }
    }
    if (sd_state == MSD_OK) {
      /* Msp SD initialization */
      BSP_SD_MspInit(&uSdHandle, NULL);

      /* HAL SD initialization */
      if (HAL_SD_Init(&uSdHandle) != HAL_OK) {
        sd_state = MSD_ERROR;
      }

      /* Configure SD Bus width */
      if (sd_state == MSD_OK) {
        /* Enable wide operation */
        if (HAL_SD_ConfigWideBusOperation(&uSdHandle, SD_BUS_WIDE) != HAL_OK) {
          sd_state = MSD_ERROR;
        }
      }
    }
  }
  return  sd_state;
}

__weak void BSP_SD_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(Params);
#if !defined(STM32_CORE_VERSION) || (STM32_CORE_VERSION <= 0x02050000)
  /* Configure SD GPIOs */
  const PinMap *map = PinMap_SD;
  while (map->pin != NC) {
    pin_function(map->pin, map->function);
    map++;
  }
#else
  /* Configure SD GPIO pins */
  pinmap_pinout(SD_PinNames.pin_d0, PinMap_SD_DATA0);
#if SD_BUS_WIDE == SD_BUS_WIDE_4B
  pinmap_pinout(SD_PinNames.pin_d1, PinMap_SD_DATA1);
  pinmap_pinout(SD_PinNames.pin_d2, PinMap_SD_DATA2);
  pinmap_pinout(SD_PinNames.pin_d3, PinMap_SD_DATA3);
#endif
  pinmap_pinout(SD_PinNames.pin_cmd, PinMap_SD_CMD);
  pinmap_pinout(SD_PinNames.pin_ck, PinMap_SD_CK);
#if defined(SDMMC1) || defined(SDMMC2)
#if !defined(SDMMC_CKIN_NA)
  if (SD_PinNames.pin_ckin != NC) {
    pinmap_pinout(SD_PinNames.pin_ckin, PinMap_SD_CKIN);
  }
#endif
#if !defined(SDMMC_CDIR_NA)
  if (SD_PinNames.pin_cdir != NC) {
    pinmap_pinout(SD_PinNames.pin_cdir, PinMap_SD_CDIR);
  }
#endif
#if !defined(SDMMC_D0DIR_NA)
  if (SD_PinNames.pin_d0dir != NC) {
    pinmap_pinout(SD_PinNames.pin_d0dir, PinMap_SD_D0DIR);
  }
#endif
#if !defined(SDMMC_D123DIR_NA)
  if (SD_PinNames.pin_d123dir != NC) {
    pinmap_pinout(SD_PinNames.pin_d123dir, PinMap_SD_D123DIR);
  }
#endif
#endif /* SDMMC1 || SDMMC2 */
#endif /* !STM32_CORE_VERSION || (STM32_CORE_VERSION <= 0x02050000) */
  /* Enable SD clock */
#if defined(SDMMC1) || defined(SDMMC2)
#if defined(SDMMC1)
  if (hsd->Instance == SDMMC1) {
    __HAL_RCC_SDMMC1_CLK_ENABLE();
  }
#endif
#if defined(SDMMC2)
  if (hsd->Instance == SDMMC2) {
    __HAL_RCC_SDMMC2_CLK_ENABLE();
  }
#endif
#else
  UNUSED(hsd);
  __HAL_RCC_SDIO_CLK_ENABLE();
#endif
}

__weak void BSP_SD_MspDeInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(Params);
  /* DeInit GPIO pins can be done in the application
     (by surcharging this __weak function) */
#if !defined(STM32_CORE_VERSION) || (STM32_CORE_VERSION <= 0x02050000)
  const PinMap *map = PinMap_SD;
  while (map->pin != NC) {
    HAL_GPIO_DeInit((GPIO_TypeDef *)STM_PORT(map->pin), STM_GPIO_PIN(map->pin));
    map++;
  }
#else
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d0)), STM_GPIO_PIN(SD_PinNames.pin_d0));
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d1)), STM_GPIO_PIN(SD_PinNames.pin_d1));
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d2)), STM_GPIO_PIN(SD_PinNames.pin_d2));
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d3)), STM_GPIO_PIN(SD_PinNames.pin_d3));
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_cmd)), STM_GPIO_PIN(SD_PinNames.pin_cmd));
  HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_ck)), STM_GPIO_PIN(SD_PinNames.pin_ck));
#if defined(SDMMC1) || defined(SDMMC2)
#if !defined(SDMMC_CKIN_NA)
  if (SD_PinNames.pin_ckin != NC) {
    HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_ckin)), STM_GPIO_PIN(SD_PinNames.pin_ckin));
  }
#endif
#if !defined(SDMMC_CDIR_NA)
  if (SD_PinNames.pin_cdir != NC) {
    HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_cdir)), STM_GPIO_PIN(SD_PinNames.pin_cdir));
  }
#endif
#if !defined(SDMMC_D0DIR_NA)
  if (SD_PinNames.pin_d0dir != NC) {
    HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d0dir)), STM_GPIO_PIN(SD_PinNames.pin_d0dir));
  }
#endif
#if !defined(SDMMC_D123DIR_NA)
  if (SD_PinNames.pin_d123dir != NC) {
    HAL_GPIO_DeInit((GPIO_TypeDef *)get_GPIO_Port(STM_PORT(SD_PinNames.pin_d123dir)), STM_GPIO_PIN(SD_PinNames.pin_d123dir));
  }
#endif
#endif /* SDMMC1 || SDMMC2 */
#endif /* !STM32_CORE_VERSION || (STM32_CORE_VERSION <= 0x02050000) */

  /* Disable SD clock */
#if defined(SDMMC1) || defined(SDMMC2)
#if defined(SDMMC1)
  if (hsd->Instance == SDMMC1) {
    __HAL_RCC_SDMMC1_CLK_DISABLE();
  }
#endif
#if defined(SDMMC2)
  if (hsd->Instance == SDMMC2) {
    __HAL_RCC_SDMMC2_CLK_DISABLE();
  }
#endif
#else
  UNUSED(hsd);
  __HAL_RCC_SDIO_CLK_DISABLE();
#endif
}

bool BSP_SD_GetCardInfo(HAL_SD_CardInfoTypeDef *CardInfo)
{
  /* Get SD card Information */
  return (HAL_SD_GetCardInfo(&uSdHandle, CardInfo) == HAL_OK);
}
